--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>leader board</title>
+    <!--stylesheet-->
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <a href="#">home</a>
+        <a href="#">about</a>
+        <a href="#">contact</a>
+    </nav>
+    <section></section>
+    <section></section>
+    <section></section>
 </body>
 </html>
