--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3 class="player-name">player-5</h3>
+                        <h3 class="player-name">Justin walter</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3 class="player-name">player-6</h3>
+                        <h3 class="player-name">Ab-de Marya</h3>
                     </div>
                 </div>
             </div>
