--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img class="logo" src="images/icons/logo.png" alt="">
                 <h3 id="logo-1" >Idea</h3>
             </div>
-            <div class="nav-sec ">
+            <div class="nav-sec ab">
                 <a href="#">home</a>
                 <a href="#">contact</a>
                 <a href="#">about</a>
